Fix spacing issues and text divs
made spacing of header and call to action have the same padding
and responsiveness. Eliminated h1 class for cta text and created a
more customizable div instead.

--- a/style.css
+++ b/style.css
@@ -11,24 +11,28 @@ body {
     background-color: #1F2937;
     border-color: #1F2937;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 0px 100px 0px 200px;
+    padding: 15px 100px 15px 100px;
 }
 
 .left {
     display: flex;
-    flex: 2;
+    flex: 1;
     color: white;
     font-size: 24px;
+    font-weight: bold;
+    
 }
 
 .right {
     display: flex;
-    flex: 1;
+    flex: 2;
+    flex-direction: row-reverse;
 }
 
 .links {
     display: flex;
     gap: 20px;
+    justify-content: space-between;
 
 }
 
@@ -39,7 +43,7 @@ a {
 
 .cta {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 100px;
     background-color: #1F2937;
     color: white;
@@ -59,4 +63,9 @@ a {
 img {
     max-width: 300px;
     max-height: 200px;
+}
+
+.cta-text {
+    font-size: 48px;
+    font-weight: bold;
 }
